# hepha

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  install_mirai.sh  rebuild_std.sh  validate.sh
annotations/: Cargo.toml  README.md
annotations/src/: lib.rs
binaries/.summary_store.sled/: db
checker/: Cargo.toml
checker/src/: abstract_value.rs  block_visitor.rs  body_visitor.rs  call_graph.rs  call_visitor.rs  callbacks.rs  cargo_hepha.rs  constant_domain.rs  contract_errors.rs  crate_visitor.rs  expected_errors.rs  expression.rs  fixed_point_visitor.rs  known_names.rs  lib.rs  main.rs  options.rs  path.rs  smt_solver.rs  summaries.rs  tag_domain.rs  type_visitor.rs  utils.rs  z3_solver.rs
checker/tests/: integration_tests.rs
checker/tests/call_graph/: replace_croot.rs
checker/tests/run-pass/: abstract_value.rs  alloc_zeroed.rs  and_then.rs  array_copy.rs  array_index.rs  array_len.rs  array_literal.rs  array_literal_out_of_bounds.rs  array_pattern_copy.rs  array_pattern_move.rs  array_repeat.rs  array_static.rs  ascii_set.rs  assume.rs  assume_preconditions.rs  assume_provably_false.rs  async.rs  binary_arith.rs  binary_bitwise.rs  binary_overflow.rs  bit_counting.rs  bit_vec.rs  bit_vector_and_vec_push.rs  bitwise_not.rs  box_deref.rs  box_struct.rs  call_once.rs  cast.rs  checked_add.rs  closure_mut_param.rs  closure_param.rs  closure_precond_inference.rs  closure_result.rs  cmp_max.rs  constant_time_taint.rs  contract_annotations.rs  copy_from_slice.rs  crate_traversal.rs  deallocate.rs  def_id_not_unique.rs  (+146 more)
contracts/arithmetic/contract_eight/: Cargo.toml
contracts/arithmetic/contract_eighteen/: Cargo.toml
contracts/arithmetic/contract_eleven/: Cargo.toml
contracts/arithmetic/contract_fifteen/: Cargo.toml
contracts/arithmetic/contract_five/: Cargo.toml
contracts/arithmetic/contract_four/: Cargo.toml
contracts/arithmetic/contract_fourteen/: Cargo.toml
contracts/arithmetic/contract_nine/: Cargo.toml
contracts/arithmetic/contract_nineteen/: Cargo.toml
contracts/arithmetic/contract_one/: Cargo.toml
contracts/arithmetic/contract_seven/: Cargo.toml
contracts/arithmetic/contract_seventeen/: Cargo.toml
contracts/arithmetic/contract_six/: Cargo.toml
contracts/arithmetic/contract_sixteen/: Cargo.toml
contracts/arithmetic/contract_ten/: Cargo.toml
contracts/arithmetic/contract_thirteen/: Cargo.toml
contracts/arithmetic/contract_three/: Cargo.toml
contracts/arithmetic/contract_twelve/: Cargo.toml
contracts/arithmetic/contract_twenty/: Cargo.toml
contracts/arithmetic/contract_two/: Cargo.toml
contracts/bad_randomness/basic/: Cargo.toml
contracts/bad_randomness/contract_eight/: Cargo.toml
contracts/bad_randomness/contract_eighteen/: Cargo.toml
contracts/bad_randomness/contract_eleven/: Cargo.toml
contracts/bad_randomness/contract_fifteen/: Cargo.toml
contracts/bad_randomness/contract_five/: Cargo.toml
contracts/bad_randomness/contract_four/: Cargo.toml
contracts/bad_randomness/contract_fourteen/: Cargo.toml
contracts/bad_randomness/contract_nine/: Cargo.toml
contracts/bad_randomness/contract_nineteen/: Cargo.toml
contracts/bad_randomness/contract_one/: Cargo.toml
contracts/bad_randomness/contract_seven/: Cargo.toml
contracts/bad_randomness/contract_seventeen/: Cargo.toml
contracts/bad_randomness/contract_six/: Cargo.toml
contracts/bad_randomness/contract_sixteen/: Cargo.toml
contracts/bad_randomness/contract_ten/: Cargo.toml
contracts/bad_randomness/contract_thirteen/: Cargo.toml
contracts/bad_randomness/contract_three/: Cargo.toml
contracts/bad_randomness/contract_twelve/: Cargo.toml
contracts/bad_randomness/contract_twenty/: Cargo.toml
contracts/bad_randomness/contract_two/: Cargo.toml
contracts/bad_randomness/random_number/: Cargo.toml
contracts/bad_randomness/random_winner/: Cargo.toml
contracts/numerical_precision/basic/: Cargo.toml
contracts/numerical_precision/contract_eight/: Cargo.toml
contracts/numerical_precision/contract_eighteen/: Cargo.toml
contracts/numerical_precision/contract_eleven/: Cargo.toml
contracts/numerical_precision/contract_fifteen/: Cargo.toml
contracts/numerical_precision/contract_five/: Cargo.toml
contracts/numerical_precision/contract_four/: Cargo.toml
contracts/numerical_precision/contract_fourteen/: Cargo.toml
contracts/numerical_precision/contract_nine/: Cargo.toml
contracts/numerical_precision/contract_nineteen/: Cargo.toml
contracts/numerical_precision/contract_one/: Cargo.toml
contracts/numerical_precision/contract_seven/: Cargo.toml
contracts/numerical_precision/contract_seventeen/: Cargo.toml
contracts/numerical_precision/contract_six/: Cargo.toml
contracts/numerical_precision/contract_sixteen/: Cargo.toml
contracts/numerical_precision/contract_ten/: Cargo.toml
contracts/numerical_precision/contract_thirteen/: Cargo.toml
contracts/numerical_precision/contract_three/: Cargo.toml
contracts/numerical_precision/contract_twelve/: Cargo.toml
contracts/numerical_precision/contract_twenty/: Cargo.toml
contracts/numerical_precision/contract_twenty_five/: Cargo.toml
contracts/numerical_precision/contract_twenty_four/: Cargo.toml
contracts/numerical_precision/contract_twenty_one/: Cargo.toml
contracts/numerical_precision/contract_twenty_three/: Cargo.toml
contracts/numerical_precision/contract_twenty_two/: Cargo.toml
contracts/numerical_precision/contract_two/: Cargo.toml
contracts/numerical_precision/lending/: Cargo.toml
contracts/overflow/contract_eight/: Cargo.toml
contracts/overflow/contract_eighteen/: Cargo.toml
contracts/overflow/contract_eleven/: Cargo.toml
contracts/overflow/contract_fifteen/: Cargo.toml
contracts/overflow/contract_five/: Cargo.toml
contracts/overflow/contract_four/: Cargo.toml
contracts/overflow/contract_fourteen/: Cargo.toml
contracts/overflow/contract_nine/: Cargo.toml
contracts/overflow/contract_nineteen/: Cargo.toml
contracts/overflow/contract_one/: Cargo.toml
contracts/overflow/contract_seven/: Cargo.toml
examples/shopping_cart/: Cargo.toml
(+218 files in other folders)
