[workspace]
resolver = "2"

members = [
  "annotations",
  "checker",
  "standard_contracts",
  "contracts/reentrancy/basis", 
  "contracts/reentrancy/cross_function", 
  "contracts/arithmetic/contract_one",
  "contracts/arithmetic/contract_two",
  "contracts/arithmetic/contract_three", 
  "contracts/arithmetic/contract_four", 
  "contracts/arithmetic/contract_five", 
  "contracts/arithmetic/contract_six", 
  "contracts/arithmetic/contract_seven", 
  "contracts/arithmetic/contract_eight", 
  "contracts/arithmetic/contract_nine", 
  "contracts/arithmetic/contract_ten", 
  "contracts/bad_randomness/contract_one",
  "contracts/bad_randomness/contract_two", 
  "contracts/bad_randomness/contract_three",
  "contracts/bad_randomness/contract_four",
  "contracts/bad_randomness/contract_five",
  "contracts/bad_randomness/contract_six",
  "contracts/bad_randomness/contract_seven",
  "contracts/bad_randomness/contract_eight",
  "contracts/bad_randomness/contract_nine",
  "contracts/bad_randomness/contract_ten",
  "contracts/numerical_precision/contract_one", 
  "contracts/numerical_precision/contract_two",
  "contracts/numerical_precision/contract_three",
  "contracts/numerical_precision/contract_four",
  "contracts/numerical_precision/contract_five",
  "contracts/numerical_precision/contract_six",
  "contracts/numerical_precision/contract_seven",
  "contracts/numerical_precision/contract_eight",
  "contracts/numerical_precision/contract_nine",
  "contracts/numerical_precision/contract_ten",
  "contracts/time_manipulation/contract_one", 
  "contracts/time_manipulation/contract_two",
  "contracts/time_manipulation/contract_three",
  "contracts/time_manipulation/contract_four",
  "contracts/time_manipulation/contract_five",
  "contracts/time_manipulation/contract_six",
  "contracts/time_manipulation/contract_seven",
  "contracts/time_manipulation/contract_eight",
  "contracts/time_manipulation/contract_nine",
  "contracts/time_manipulation/contract_ten"]

[profile.release]
debug = true

[profile.bench]
debug = true
