[workspace]
resolver = "2"

members = [
  "annotations",
  "checker",
  "contracts/arithmetic/contract_one",
  "contracts/arithmetic/contract_two",
  "contracts/arithmetic/contract_three", 
  "contracts/arithmetic/contract_four", 
  "contracts/arithmetic/contract_five", 
  "contracts/arithmetic/contract_six", 
  "contracts/arithmetic/contract_seven", 
  "contracts/arithmetic/contract_eight", 
  "contracts/arithmetic/contract_nine", 
  "contracts/arithmetic/contract_ten", 
  "contracts/arithmetic/contract_eleven", 
  "contracts/arithmetic/contract_twelve",
  "contracts/arithmetic/contract_thirteen",
  "contracts/arithmetic/contract_fourteen",
  "contracts/arithmetic/contract_fifteen",
  "contracts/arithmetic/contract_sixteen",
  "contracts/arithmetic/contract_seventeen",
  "contracts/arithmetic/contract_eighteen",
  "contracts/arithmetic/contract_nineteen",
  "contracts/arithmetic/contract_twenty",         
  "contracts/bad_randomness/contract_one",
  "contracts/bad_randomness/contract_two", 
  "contracts/bad_randomness/contract_three",
  "contracts/bad_randomness/contract_four",
  "contracts/bad_randomness/contract_five",
  "contracts/bad_randomness/contract_six",
  "contracts/bad_randomness/contract_seven",
  "contracts/bad_randomness/contract_eight",
  "contracts/bad_randomness/contract_nine",
  "contracts/bad_randomness/contract_ten",
  "contracts/bad_randomness/contract_eleven",
  "contracts/bad_randomness/contract_twelve",
  "contracts/bad_randomness/contract_thirteen",
  "contracts/bad_randomness/contract_fourteen",
  "contracts/bad_randomness/contract_fifteen",
  "contracts/bad_randomness/contract_sixteen",
  "contracts/bad_randomness/contract_seventeen",
  "contracts/bad_randomness/contract_eighteen",
  "contracts/bad_randomness/contract_nineteen",
  "contracts/bad_randomness/contract_twenty",   
  "contracts/numerical_precision/contract_one", 
  "contracts/numerical_precision/contract_two",
  "contracts/numerical_precision/contract_three",
  "contracts/numerical_precision/contract_four",
  "contracts/numerical_precision/contract_five",
  "contracts/numerical_precision/contract_six",
  "contracts/numerical_precision/contract_seven",
  "contracts/numerical_precision/contract_eight",
  "contracts/numerical_precision/contract_nine",
  "contracts/numerical_precision/contract_ten",
  "contracts/numerical_precision/contract_eleven",
  "contracts/numerical_precision/contract_twelve",
  "contracts/numerical_precision/contract_thirteen",
  "contracts/numerical_precision/contract_fourteen",
  "contracts/numerical_precision/contract_fifteen",
  "contracts/numerical_precision/contract_sixteen",
  "contracts/numerical_precision/contract_seventeen",
  "contracts/numerical_precision/contract_eighteen",
  "contracts/numerical_precision/contract_nineteen",
  "contracts/numerical_precision/contract_twenty",   
  "contracts/time_manipulation/contract_one", 
  "contracts/time_manipulation/contract_two",
  "contracts/time_manipulation/contract_three",
  "contracts/time_manipulation/contract_four",
  "contracts/time_manipulation/contract_five",
  "contracts/time_manipulation/contract_six",
  "contracts/time_manipulation/contract_seven",
  "contracts/time_manipulation/contract_eight",
  "contracts/time_manipulation/contract_nine",
  "contracts/time_manipulation/contract_ten",
  "contracts/time_manipulation/contract_eleven",
  "contracts/time_manipulation/contract_twelve",
  "contracts/time_manipulation/contract_thirteen",
  "contracts/time_manipulation/contract_fourteen",
  "contracts/time_manipulation/contract_fifteen",
  "contracts/time_manipulation/contract_sixteen",
  "contracts/time_manipulation/contract_seventeen",
  "contracts/time_manipulation/contract_eighteen",
  "contracts/time_manipulation/contract_nineteen",
  "contracts/time_manipulation/contract_twenty",
  "contracts/reentrancy/contract_one", 
  "contracts/reentrancy/contract_two",
  "contracts/reentrancy/contract_three",
  "contracts/reentrancy/contract_four",
  "contracts/reentrancy/contract_five",
  "contracts/reentrancy/contract_six",
  "contracts/reentrancy/contract_seven",
  "contracts/reentrancy/contract_eight",
  "contracts/reentrancy/contract_nine",
  "contracts/reentrancy/contract_ten",
  "contracts/reentrancy/contract_eleven",
  "contracts/reentrancy/contract_twelve",
  "contracts/reentrancy/contract_thirteen",
  "contracts/reentrancy/contract_fourteen",
  "contracts/reentrancy/contract_fifteen",
  "contracts/reentrancy/contract_sixteen",
  "contracts/reentrancy/contract_seventeen",
  "contracts/reentrancy/contract_eighteen",
  "contracts/reentrancy/contract_nineteen",
  "contracts/reentrancy/contract_twenty"]

[profile.release]
debug = true

[profile.bench]
debug = true
