[workspace]
resolver = "2"

members = [
  "annotations",
  "checker",
  "contracts/overflow/contract_one",
  "contracts/overflow/contract_two",
  "contracts/overflow/contract_three", 
  "contracts/overflow/contract_four", 
  "contracts/overflow/contract_five", 
  "contracts/overflow/contract_six", 
  "contracts/overflow/contract_seven", 
  "contracts/overflow/contract_eight", 
  "contracts/overflow/contract_nine", 
  "contracts/overflow/contract_ten", 
  "contracts/overflow/contract_eleven", 
  "contracts/overflow/contract_twelve",
  "contracts/overflow/contract_thirteen",
  "contracts/overflow/contract_fourteen",
  "contracts/overflow/contract_fifteen",
  "contracts/overflow/contract_sixteen",
  "contracts/overflow/contract_seventeen",
  "contracts/overflow/contract_eighteen",
  "contracts/overflow/contract_nineteen",
  "contracts/overflow/contract_twenty",
  "contracts/underflow/contract_one",
  "contracts/underflow/contract_two",
  "contracts/underflow/contract_three", 
  "contracts/underflow/contract_four", 
  "contracts/underflow/contract_five", 
  "contracts/underflow/contract_six", 
  "contracts/underflow/contract_seven", 
  "contracts/underflow/contract_eight", 
  "contracts/underflow/contract_nine", 
  "contracts/underflow/contract_ten", 
  "contracts/underflow/contract_eleven", 
  "contracts/underflow/contract_twelve",
  "contracts/underflow/contract_thirteen",
  "contracts/underflow/contract_fourteen",
  "contracts/underflow/contract_fifteen",
  "contracts/underflow/contract_sixteen",
  "contracts/underflow/contract_seventeen",
  "contracts/underflow/contract_eighteen",
  "contracts/underflow/contract_nineteen",
  "contracts/underflow/contract_twenty",           
  "contracts/bad_randomness/contract_one",
  "contracts/bad_randomness/contract_two", 
  "contracts/bad_randomness/contract_three",
  "contracts/bad_randomness/contract_four",
  "contracts/bad_randomness/contract_five",
  "contracts/bad_randomness/contract_six",
  "contracts/bad_randomness/contract_seven",
  "contracts/bad_randomness/contract_eight",
  "contracts/bad_randomness/contract_nine",
  "contracts/bad_randomness/contract_ten",
  "contracts/bad_randomness/contract_eleven",
  "contracts/bad_randomness/contract_twelve",
  "contracts/bad_randomness/contract_thirteen",
  "contracts/bad_randomness/contract_fourteen",
  "contracts/bad_randomness/contract_fifteen",
  "contracts/bad_randomness/contract_sixteen",
  "contracts/bad_randomness/contract_seventeen",
  "contracts/bad_randomness/contract_eighteen",
  "contracts/bad_randomness/contract_nineteen",
  "contracts/bad_randomness/contract_twenty",   
  "contracts/numerical_precision/contract_one", 
  "contracts/numerical_precision/contract_two",
  "contracts/numerical_precision/contract_three",
  "contracts/numerical_precision/contract_four",
  "contracts/numerical_precision/contract_five",
  "contracts/numerical_precision/contract_six",
  "contracts/numerical_precision/contract_seven",
  "contracts/numerical_precision/contract_eight",
  "contracts/numerical_precision/contract_nine",
  "contracts/numerical_precision/contract_ten",
  "contracts/numerical_precision/contract_eleven",
  "contracts/numerical_precision/contract_twelve",
  "contracts/numerical_precision/contract_thirteen",
  "contracts/numerical_precision/contract_fourteen",
  "contracts/numerical_precision/contract_fifteen",
  "contracts/numerical_precision/contract_sixteen",
  "contracts/numerical_precision/contract_seventeen",
  "contracts/numerical_precision/contract_eighteen",
  "contracts/numerical_precision/contract_nineteen",
  "contracts/numerical_precision/contract_twenty",   
  "contracts/time_manipulation/contract_one", 
  "contracts/time_manipulation/contract_two",
  "contracts/time_manipulation/contract_three",
  "contracts/time_manipulation/contract_four",
  "contracts/time_manipulation/contract_five",
  "contracts/time_manipulation/contract_six",
  "contracts/time_manipulation/contract_seven",
  "contracts/time_manipulation/contract_eight",
  "contracts/time_manipulation/contract_nine",
  "contracts/time_manipulation/contract_ten",
  "contracts/time_manipulation/contract_eleven",
  "contracts/time_manipulation/contract_twelve",
  "contracts/time_manipulation/contract_thirteen",
  "contracts/time_manipulation/contract_fourteen",
  "contracts/time_manipulation/contract_fifteen",
  "contracts/time_manipulation/contract_sixteen",
  "contracts/time_manipulation/contract_seventeen",
  "contracts/time_manipulation/contract_eighteen",
  "contracts/time_manipulation/contract_nineteen",
  "contracts/time_manipulation/contract_twenty",
  "contracts/reentrancy/contract_one", 
  "contracts/reentrancy/contract_two",
  "contracts/reentrancy/contract_three",
  "contracts/reentrancy/contract_four",
  "contracts/reentrancy/contract_five",
  "contracts/reentrancy/contract_six",
  "contracts/reentrancy/contract_seven",
  "contracts/reentrancy/contract_eight",
  "contracts/reentrancy/contract_nine",
  "contracts/reentrancy/contract_ten",
  "contracts/reentrancy/contract_eleven",
  "contracts/reentrancy/contract_twelve",
  "contracts/reentrancy/contract_thirteen",
  "contracts/reentrancy/contract_fourteen",
  "contracts/reentrancy/contract_fifteen",
  "contracts/reentrancy/contract_sixteen",
  "contracts/reentrancy/contract_seventeen",
  "contracts/reentrancy/contract_eighteen",
  "contracts/reentrancy/contract_nineteen",
  "contracts/reentrancy/contract_twenty", 
  "contracts/underflow/contract_one", 
  "contracts/underflow/contract_two"]

[profile.release]
debug = true

[profile.bench]
debug = true
