[package]

name = "hepha-annotations"
version = "1.12.1"
authors = ["Herman Venter <herman_venter@msn.com>"]
description = "Macros that provide source code annotations for HEPHA"
repository = "https://github.com/endorlabs/HEPHA"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
test = false # we have no unit tests
doctest = false # and no doc tests

[dependencies]
